@@ -1,3 +1,8 @@
+2009-05-25  Tristan Gingold  <gingold@adacore.com>
+
+	* fopen-vms.h (FOPEN_RB, FOPEN_WB, FOPEN_AB, FOPEN_RUB, FOPEN_WUB,
+	FOPEN_AUB): Use "rfm=udf,rat=none" attribute.
+
 2009-04-22  Taras Glek <tglek@mozilla.com>
 
 	* hashtab.h: Update GTY annotations to new syntax.
